2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* images/radial_dynamic_network_icon.png: Added file.
	
	* operation/agentes/networkmap.php: Changed the icon
	of the 'radial dinamic' tab.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Added filters to the
	function "graph_monitor_wheel".
	
	* operation/agentes/networkmap.dinamic.php,
	  operation/agentes/networkmap.php,
	  include/functions_networkmap.php: Added the 'radial
	dinamic' type.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Improved the function
	"graph_monitor_wheel" to remove the html encoding.
	
	* include/graphs/pandora.d3.js: Mayor improvements
	on the function "solarburst".

2014-08-21  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added a function to add an event comment.

2014-08-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Modified the color of
	the main node on the function "graph_monitor_wheel".

2014-08-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Fixed the function
	"graph_monitor_wheel".

2014-08-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php, operation/search_helps.php,
	operation/search_results.php, operation/search_helps.getdata.php,
	general/pandora_help.php: added feature to search into the help
	files, it is in the search bar header.
	
	* operation/search_main.php: fixed the search any term of several
	words separated with whitespaces.

2014-08-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql:
	Added some inserts with the new action and command to create
	a ticket in Integria IMS.
